Revision history for Perl module DateTime::Functions

0.11 2016-01-11 NEILB
    - Updated Changes file to follow format in CPAN::Changes::Spec
    - Switched to Dist::Zilla

0.10 2010-12-08 AUDREYT
    - LICENSING CHANGE: This compilation and all individual files in it
      are now under the nullary CC0 1.0 Universal terms:
      To the extent possible under law, 唐鳳 has waived all copyright and
      related or neighboring rights to Module-Signature.
    - Updated Module::Install to 1.00.

0.01 2003-11-01 AUTRIJUS
    - Initial CPAN release
